# serde_polars

./: .gitignore  Cargo.toml  LICENSE  README.md  test_runner.sh
.github/workflows/: rust.yml
src/: error.rs  lib.rs  version_compat.rs
tests/: complex_structures.rs  debug_array_types.rs  debug_chrono_detection.rs  debug_date_types.rs  debug_datetime_format.rs  debug_schema_creation.rs  debug_single_record.rs  edge_case_patterns_test.rs  integration_basic_roundtrip.rs  large_dataset_test.rs  multithreading.rs  roundtrip_comparison_test.rs  temporal_types.rs  test_chrono_detection_fix.rs  test_dataframe_to_struct.rs  test_direct_numeric_conversion.rs  test_raw_chrono_detection.rs
tests/data_types/: all_types.rs  optional_types.rs
tests/edge_cases/: empty_and_errors.rs  malformed_data.rs
tests/integration/: basic_roundtrip.rs  version_compatibility.rs
tests/performance/: benchmarks.rs
