 [package]
name = "serde_polars"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance serde integration for Polars DataFrames"
license = "MIT"
repository = "https://github.com/your-username/serde_polars"
documentation = "https://docs.rs/serde_polars"
keywords = ["polars", "serde", "dataframe", "serialization", "arrow"]
categories = ["data-structures", "encoding", "science"]
readme = "README.md"

[dependencies]
# User must include this in their Cargo.toml - we just specify minimum requirement
polars = { version = ">=0.40", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.13", features = ["arrow-55"] }
arrow = "55.0"
thiserror = "1.0"
df-interchange = { version = "0.2", features = ["arrow_55", "arrow_crate_55"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
anyhow = "1.0"

# Configure benchmarks
[[bench]]
name = "benchmarks"
harness = false
path = "tests/performance/benchmarks.rs"


[features]
default = []

# Polars version features - users can select which version they want
# IMPORTANT: These features are mutually exclusive! Only enable ONE at a time.
# Never use --all-features as it will cause compilation errors.
polars-0-40 = ["df-interchange", "df-interchange/polars_0_40"]
polars-0-41 = ["df-interchange", "df-interchange/polars_0_41"]
polars-0-42 = ["df-interchange", "df-interchange/polars_0_42"]
polars-0-43 = ["df-interchange", "df-interchange/polars_0_43"]
polars-0-44 = ["df-interchange", "df-interchange/polars_0_44"]
polars-0-45 = ["df-interchange", "df-interchange/polars_0_45"]
polars-0-46 = ["df-interchange", "df-interchange/polars_0_46"]
polars-0-47 = ["df-interchange", "df-interchange/polars_0_47"]
polars-0-48 = ["df-interchange", "df-interchange/polars_0_48"]
polars-0-49 = ["df-interchange", "df-interchange/polars_0_49"]
polars-0-50 = ["df-interchange", "df-interchange/polars_0_50"]

