name = "serde_polars"
version = "0.1.2"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance serde integration for Polars DataFrames"
license = "MIT"
repository = "https://github.com/your-username/serde_polars"
documentation = "https://docs.rs/serde_polars"
keywords = ["polars", "serde", "dataframe", "serialization", "arrow"]
categories = ["data-structures", "encoding", "science"]
readme = "README.md"

[dependencies]
# User must include this in their Cargo.toml - we just specify minimum requirement
polars_crate_0_40 = { package = "polars", version = "0.40", optional = true}
polars_crate_0_41 = { package = "polars", version = "0.41", optional = true}
polars_crate_0_42 = { package = "polars", version = "0.42", optional = true}
polars_crate_0_43 = { package = "polars", version = "0.43", optional = true}
polars_crate_0_44 = { package = "polars", version = "0.44", optional = true}
polars_crate_0_45 = { package = "polars", version = "0.45", optional = true}
polars_crate_0_46 = { package = "polars", version = "0.46", optional = true}
polars_crate_0_47 = { package = "polars", version = "0.47", optional = true}
polars_crate_0_48 = { package = "polars", version = "0.48", optional = true}
polars_crate_0_49 = { package = "polars", version = "0.49", optional = true}
polars_crate_0_50 = { package = "polars", version = "0.50", optional = true}


serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.13", features = ["arrow-55"] }
arrow = "55.0"
thiserror = "1.0"
df-interchange = { version = "0.2", features = ["arrow_55", "arrow_crate_55"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
anyhow = "1.0"

# Configure benchmarks
[[bench]]
name = "benchmarks"
harness = false
path = "tests/performance/benchmarks.rs"


[features]
default = []

# Polars version features - users can select which version they want
# IMPORTANT: These features are mutually exclusive! Only enable ONE at a time.
# Never use --all-features as it will cause compilation errors.
polars_0_40 = ["polars_crate_0_40", "df-interchange", "df-interchange/polars_0_40"]
polars_0_41 = ["polars_crate_0_41", "df-interchange", "df-interchange/polars_0_41"]
polars_0_42 = ["polars_crate_0_42", "df-interchange", "df-interchange/polars_0_42"]
polars_0_43 = ["polars_crate_0_43", "df-interchange", "df-interchange/polars_0_43"]
polars_0_44 = ["polars_crate_0_44", "df-interchange", "df-interchange/polars_0_44"]
polars_0_45 = ["polars_crate_0_45", "df-interchange", "df-interchange/polars_0_45"]
polars_0_46 = ["polars_crate_0_46", "df-interchange", "df-interchange/polars_0_46"]
polars_0_47 = ["polars_crate_0_47", "df-interchange", "df-interchange/polars_0_47"]
polars_0_48 = ["polars_crate_0_48", "df-interchange", "df-interchange/polars_0_48"]
polars_0_49 = ["polars_crate_0_49", "df-interchange", "df-interchange/polars_0_49"]
polars_0_50 = ["polars_crate_0_50", "df-interchange", "df-interchange/polars_0_50"]


